--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
     </style>
   </head>
   <body data-theme="light">
-    <button class="toggle-dark" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+    <button class="toggle-dark" onclick="toggleDarkMode()">🌙</button>
 
     <div class="container">
       <div class="header">
-        <h1>Prathamesh C Shetty</h1>
+        <h1>PRATHAMESH C SHETTY</h1>
         <div class="contact">
           <p>📞 7795056572</p>
           <p>
