--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         const newTheme = currentTheme === "light" ? "dark" : "light";
         body.setAttribute("data-theme", newTheme);
         document.querySelector(".toggle-dark").textContent =
-          newTheme === "light" ? "🌙 Dark Mode" : "☀️ Light Mode";
+          newTheme === "light" ? "🌙" : "☀️";
       }
     </script>
   </body>
