--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </div>
 
     <div class="btns">
-      <a class="btn" href="RESUMe.pdf" download>📄 Download Resume PDF</a>
+      <a class="btn" href="RESUME.pdf" download>📄 Download Resume PDF</a>
     </div>
 
     <script>
